重构优化： 1. 将Python模型相关封装为Docker镜像； 2. 优化设置，每一步单独设置提供商 3.